# fan-optimization

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  environment.yml  pyproject.toml
configs/: architecture_enumeration.yaml
configs/fusion/: README.md  fan_script.manifest  fan_script.py  params.example.json
configs/su2/: fan3d_steady.cfg.j2  fan3d_unsteady.cfg.j2  oscillating_airfoil_benchmark.cfg.j2  slice_steady.cfg.j2  slice_unsteady.cfg.j2  thin_plate_2d_pitching.cfg.j2
data/phase3_sweep/: correlation.json
data/spike_0_2/: deferral.json
data/spike_0_3/: deferral.json
data/spike_0_5/: deferral.json
data/spike_0_6c/: results.json  sub_1_result.json
docs/: V2_backlog.md  blade_architecture_redesign.md  effective_spec.md  effective_spec.yaml  locks_index.md  phase_checklist.md  plan_R11.md  plan_v1_slim_latest.md  proposed_plan_edits_0_6d.md  report-final.md  report-summary.md  retired_phrases.yaml  review_process.md  spike_0_2_protocol.md  spike_0_3_protocol.md  spike_0_4_protocol.md  spike_0_5_protocol.md  spike_0_6_protocol.md  spike_0_6c_protocol.md  spike_0_6d_protocol.md  spike_0_7a_protocol.md  spike_0_7b_protocol.md  spike_0_7c_protocol.md
docs/history/: report-v1.md  (+6 more)
notebooks/: README.md  aero_objective_walkthrough.ipynb  colab_naca_benchmark.ipynb  colab_phase2a_baseline_cfd.ipynb  colab_phase3_correlation.ipynb  colab_phase4_aero_campaign.ipynb  colab_phase4_runner.ipynb  colab_phase5_bakeoff.ipynb  colab_phase5_verify.ipynb  colab_spike_0_6c.ipynb  colab_spike_0_6d.ipynb  geometry_inspection.ipynb  hello_test.ipynb  learn_self_intersection.ipynb  pareto_analysis.ipynb  physical_results.ipynb  render_failed_blades.ipynb  render_top_blades.ipynb
scripts/: analyze_phase4.py  diagnose_su2_pitching_regime.py  fan_addin.py  gen_benchmark_meshes.py  launch_phase4.py  parse_su2_history_to_cycles.py  print_strategy.py  recommend_designs.py  run_naca_benchmark.py  run_phase1_smoketest.py  run_phase2_to.py  run_phase2a_baseline_cfd.py  run_phase3_correlation.py  run_phase4_aero.py  run_phase4_bo.py  run_phase5_verify.py  run_phase5_verify_blade.py  run_phase6_physical.py  run_spike_0_1.py  run_spike_0_3_baseline.py  run_spike_0_4.py  run_spike_0_5.py  run_spike_0_6.py  run_spike_0_6a.py  run_spike_0_6b.py  run_spike_0_6c.py  run_spike_0_6c_1.py  run_spike_0_6c_2.py  run_spike_0_6d.py  run_spike_0_6d_1.py  run_spike_0_6d_2.py  run_spike_0_6d_3.py  run_spike_0_7.py  run_spike_0_7a.py  run_spike_0_7b.py  run_spike_0_7c.py  run_spike_0_7c_seed.py  run_spike_0_7c_smoke.py  smoke_test.py  spike_0_2_analyze.py
tests/: conftest.py
(+214 files in other folders)
